--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@metamask/sdk-react-ui": "^0.8.0",
+    "@metamask/sdk-react": "^0.9.0",
+    "@metamask/sdk-react-ui": "^0.9.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
