--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "ethereum-wallet-interface",
+  "homepage": "https://sem-aa.github.io/ethereum-wallet-interface",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@metamask/sdk-react": "^0.9.0",
-    "@metamask/sdk-react-ui": "^0.9.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,6 +15,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "cross-env GENERATE_SOURCEMAP=false react-scripts start",
     "build": "cross-env GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
@@ -40,6 +42,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "gh-pages": "^6.0.0"
   }
 }
